standards/gnds-2.0/try/c/src/v2.0/covariance/Slices.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ comment
// Constructs you're LESS likely to care about are preceded with:
//    // --- comment
// Anything not marked as above can be ignored by most users.
//
// Slices is the basic handle type in this file. Example:
//    // Create a default Slices object:
//    Slices handle = SlicesDefault();
// Functions involving Slices are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_TRY_V2_0_COVARIANCE_SLICES
#define C_INTERFACE_TRY_V2_0_COVARIANCE_SLICES

#include "GNDStk.h"
#include "v2.0/covariance/Slice.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct SlicesClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ Slices
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct SlicesClass *Slices;

// --- Const-aware handles.
typedef const struct SlicesClass *const ConstHandle2ConstSlices;
typedef       struct SlicesClass *const ConstHandle2Slices;
typedef const struct SlicesClass *      Handle2ConstSlices;
typedef       struct SlicesClass *      Handle2Slices;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstSlices
SlicesDefaultConst();

// +++ Create, default
extern_c Handle2Slices
SlicesDefault();

// --- Create, general, const
extern_c Handle2ConstSlices
SlicesCreateConst(
   ConstHandle2Slice *const slice, const size_t sliceSize
);

// +++ Create, general
extern_c Handle2Slices
SlicesCreate(
   ConstHandle2Slice *const slice, const size_t sliceSize
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
SlicesAssign(ConstHandle2Slices This, ConstHandle2ConstSlices from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
SlicesDelete(ConstHandle2ConstSlices This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
SlicesRead(ConstHandle2Slices This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
SlicesWrite(ConstHandle2ConstSlices This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
SlicesPrint(ConstHandle2ConstSlices This);

// +++ Print to standard output, as XML
extern_c int
SlicesPrintXML(ConstHandle2ConstSlices This);

// +++ Print to standard output, as JSON
extern_c int
SlicesPrintJSON(ConstHandle2ConstSlices This);


// -----------------------------------------------------------------------------
// Child: slice
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
SlicesSliceHas(ConstHandle2ConstSlices This);

// +++ Clear
extern_c void
SlicesSliceClear(ConstHandle2Slices This);

// +++ Size
extern_c size_t
SlicesSliceSize(ConstHandle2ConstSlices This);

// +++ Add
extern_c void
SlicesSliceAdd(ConstHandle2Slices This, ConstHandle2ConstSlice slice);

// --- Get, by index \in [0,size), const
extern_c Handle2ConstSlice
SlicesSliceGetConst(ConstHandle2ConstSlices This, const size_t index_);

// +++ Get, by index \in [0,size), non-const
extern_c Handle2Slice
SlicesSliceGet(ConstHandle2Slices This, const size_t index_);

// +++ Set, by index \in [0,size)
extern_c void
SlicesSliceSet(
   ConstHandle2Slices This,
   const size_t index_,
   ConstHandle2ConstSlice slice
);

// +++ Has, by domainMin
extern_c int
SlicesSliceHasByDomainMin(
   ConstHandle2ConstSlices This,
   const Float64 domainMin
);

// --- Get, by domainMin, const
extern_c Handle2ConstSlice
SlicesSliceGetByDomainMinConst(
   ConstHandle2ConstSlices This,
   const Float64 domainMin
);

// +++ Get, by domainMin, non-const
extern_c Handle2Slice
SlicesSliceGetByDomainMin(
   ConstHandle2Slices This,
   const Float64 domainMin
);

// +++ Set, by domainMin
extern_c void
SlicesSliceSetByDomainMin(
   ConstHandle2Slices This,
   const Float64 domainMin,
   ConstHandle2ConstSlice slice
);

// +++ Has, by domainMax
extern_c int
SlicesSliceHasByDomainMax(
   ConstHandle2ConstSlices This,
   const Float64 domainMax
);

// --- Get, by domainMax, const
extern_c Handle2ConstSlice
SlicesSliceGetByDomainMaxConst(
   ConstHandle2ConstSlices This,
   const Float64 domainMax
);

// +++ Get, by domainMax, non-const
extern_c Handle2Slice
SlicesSliceGetByDomainMax(
   ConstHandle2Slices This,
   const Float64 domainMax
);

// +++ Set, by domainMax
extern_c void
SlicesSliceSetByDomainMax(
   ConstHandle2Slices This,
   const Float64 domainMax,
   ConstHandle2ConstSlice slice
);

// +++ Has, by domainValue
extern_c int
SlicesSliceHasByDomainValue(
   ConstHandle2ConstSlices This,
   const Float64 domainValue
);

// --- Get, by domainValue, const
extern_c Handle2ConstSlice
SlicesSliceGetByDomainValueConst(
   ConstHandle2ConstSlices This,
   const Float64 domainValue
);

// +++ Get, by domainValue, non-const
extern_c Handle2Slice
SlicesSliceGetByDomainValue(
   ConstHandle2Slices This,
   const Float64 domainValue
);

// +++ Set, by domainValue
extern_c void
SlicesSliceSetByDomainValue(
   ConstHandle2Slices This,
   const Float64 domainValue,
   ConstHandle2ConstSlice slice
);

// +++ Has, by domainUnit
extern_c int
SlicesSliceHasByDomainUnit(
   ConstHandle2ConstSlices This,
   const XMLName domainUnit
);

// --- Get, by domainUnit, const
extern_c Handle2ConstSlice
SlicesSliceGetByDomainUnitConst(
   ConstHandle2ConstSlices This,
   const XMLName domainUnit
);

// +++ Get, by domainUnit, non-const
extern_c Handle2Slice
SlicesSliceGetByDomainUnit(
   ConstHandle2Slices This,
   const XMLName domainUnit
);

// +++ Set, by domainUnit
extern_c void
SlicesSliceSetByDomainUnit(
   ConstHandle2Slices This,
   const XMLName domainUnit,
   ConstHandle2ConstSlice slice
);

// +++ Has, by dimension
extern_c int
SlicesSliceHasByDimension(
   ConstHandle2ConstSlices This,
   const Integer32 dimension
);

// --- Get, by dimension, const
extern_c Handle2ConstSlice
SlicesSliceGetByDimensionConst(
   ConstHandle2ConstSlices This,
   const Integer32 dimension
);

// +++ Get, by dimension, non-const
extern_c Handle2Slice
SlicesSliceGetByDimension(
   ConstHandle2Slices This,
   const Integer32 dimension
);

// +++ Set, by dimension
extern_c void
SlicesSliceSetByDimension(
   ConstHandle2Slices This,
   const Integer32 dimension,
   ConstHandle2ConstSlice slice
);


// -----------------------------------------------------------------------------
// Done
// -----------------------------------------------------------------------------

#undef extern_c
#endif