versions/GNDS-v2.0/GNDS/fortran/src/v2.0/general/Slices.f03


!! THIS FILE WAS AUTOGENERATED!
!! DO NOT MODIFY!

module generalSlices
use iso_c_binding
interface


!! -----------------------------------------------------------------------------
!! Basics
!! Create, Assign, Delete
!! -----------------------------------------------------------------------------

!! Create, default, const
function SlicesDefaultConst() &
      bind(C, name='SlicesDefaultConst')
   use iso_c_binding
   implicit none
   type(c_ptr) :: SlicesDefaultConst
end function SlicesDefaultConst

!! Create, default
function SlicesDefault() &
      bind(C, name='SlicesDefault')
   use iso_c_binding
   implicit none
   type(c_ptr) :: SlicesDefault
end function SlicesDefault

!! Create, general, const
function SlicesCreateConst( &
   slice, sliceSize &
) &
      bind(C, name='SlicesCreateConst')
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: sliceSize
   type(c_ptr), intent(in) :: slice(sliceSize)
   type(c_ptr) :: SlicesCreateConst
end function SlicesCreateConst

!! Create, general
function SlicesCreate( &
   slice, sliceSize &
) &
      bind(C, name='SlicesCreate')
   use iso_c_binding
   implicit none
   integer(c_size_t), intent(in), value :: sliceSize
   type(c_ptr), intent(in) :: slice(sliceSize)
   type(c_ptr) :: SlicesCreate
end function SlicesCreate

!! Assign
subroutine SlicesAssign(handleLHS, handleRHS) &
      bind(C, name='SlicesAssign')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handleLHS
   type(c_ptr), intent(in), value :: handleRHS
end subroutine SlicesAssign

!! Delete
subroutine SlicesDelete(handle) &
      bind(C, name='SlicesDelete')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine SlicesDelete


!! -----------------------------------------------------------------------------
!! I/O
!! Read, Write, Print
!! Each returns 0 if failure, 1 if success.
!! -----------------------------------------------------------------------------

!! Read from file
function SlicesRead(handle, filename, filenameSize) &
      bind(C, name='SlicesRead')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: SlicesRead
end function SlicesRead

!! Write to file
function SlicesWrite(handle, filename, filenameSize) &
      bind(C, name='SlicesWrite')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: filenameSize
   character(c_char), intent(in) :: filename(filenameSize)
   integer(c_int) :: SlicesWrite
end function SlicesWrite

!! Print to standard output, in our prettyprinting format
function SlicesPrint(handle) &
      bind(C, name='SlicesPrint')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: SlicesPrint
end function SlicesPrint

!! Print to standard output, as XML
function SlicesPrintXML(handle) &
      bind(C, name='SlicesPrintXML')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: SlicesPrintXML
end function SlicesPrintXML

!! Print to standard output, as JSON
function SlicesPrintJSON(handle) &
      bind(C, name='SlicesPrintJSON')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: SlicesPrintJSON
end function SlicesPrintJSON


!! -----------------------------------------------------------------------------
!! Child: slice
!! -----------------------------------------------------------------------------

!! Has
function SlicesSliceHas(handle) &
      bind(C, name='SlicesSliceHas')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int) :: SlicesSliceHas
end function SlicesSliceHas

!! Clear
subroutine SlicesSliceClear(handle) &
      bind(C, name='SlicesSliceClear')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
end subroutine SlicesSliceClear

!! Size
function SlicesSliceSize(handle) &
      bind(C, name='SlicesSliceSize')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t) :: SlicesSliceSize
end function SlicesSliceSize

!! Add
subroutine SlicesSliceAdd(handle, fieldHandle) &
      bind(C, name='SlicesSliceAdd')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine SlicesSliceAdd

!! Get, by index \in [0,size), const
function SlicesSliceGetConst(handle, index) &
      bind(C, name='SlicesSliceGetConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: SlicesSliceGetConst
end function SlicesSliceGetConst

!! Get, by index \in [0,size)
function SlicesSliceGet(handle, index) &
      bind(C, name='SlicesSliceGet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr) :: SlicesSliceGet
end function SlicesSliceGet

!! Set, by index \in [0,size)
subroutine SlicesSliceSet(handle, index, fieldHandle) &
      bind(C, name='SlicesSliceSet')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: index
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine SlicesSliceSet

!! ------------------------
!! Re: metadatum dimension
!! ------------------------

!! Has, by dimension
function SlicesSliceHasByDimension(handle, meta) &
      bind(C, name='SlicesSliceHasByDimension')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), intent(in), value :: meta
   integer(c_int) :: SlicesSliceHasByDimension
end function SlicesSliceHasByDimension

!! Get, by dimension, const
function SlicesSliceGetByDimensionConst(handle, meta) &
      bind(C, name='SlicesSliceGetByDimensionConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), intent(in), value :: meta
   type(c_ptr) :: SlicesSliceGetByDimensionConst
end function SlicesSliceGetByDimensionConst

!! Get, by dimension
function SlicesSliceGetByDimension(handle, meta) &
      bind(C, name='SlicesSliceGetByDimension')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_int), intent(in), value :: meta
   type(c_ptr) :: SlicesSliceGetByDimension
end function SlicesSliceGetByDimension

!! Set, by dimension
subroutine SlicesSliceSetByDimension(handle, meta, fieldHandle) &
      bind(C, name='SlicesSliceSetByDimension')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_int), intent(in), value :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine SlicesSliceSetByDimension

!! ------------------------
!! Re: metadatum domainValue
!! ------------------------

!! Has, by domainValue
function SlicesSliceHasByDomainValue(handle, meta) &
      bind(C, name='SlicesSliceHasByDomainValue')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), intent(in), value :: meta
   integer(c_int) :: SlicesSliceHasByDomainValue
end function SlicesSliceHasByDomainValue

!! Get, by domainValue, const
function SlicesSliceGetByDomainValueConst(handle, meta) &
      bind(C, name='SlicesSliceGetByDomainValueConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_int), intent(in), value :: meta
   type(c_ptr) :: SlicesSliceGetByDomainValueConst
end function SlicesSliceGetByDomainValueConst

!! Get, by domainValue
function SlicesSliceGetByDomainValue(handle, meta) &
      bind(C, name='SlicesSliceGetByDomainValue')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_int), intent(in), value :: meta
   type(c_ptr) :: SlicesSliceGetByDomainValue
end function SlicesSliceGetByDomainValue

!! Set, by domainValue
subroutine SlicesSliceSetByDomainValue(handle, meta, fieldHandle) &
      bind(C, name='SlicesSliceSetByDomainValue')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_int), intent(in), value :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine SlicesSliceSetByDomainValue

!! ------------------------
!! Re: metadatum domainMin
!! ------------------------

!! Has, by domainMin
function SlicesSliceHasByDomainMin(handle, meta) &
      bind(C, name='SlicesSliceHasByDomainMin')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), intent(in), value :: meta
   integer(c_int) :: SlicesSliceHasByDomainMin
end function SlicesSliceHasByDomainMin

!! Get, by domainMin, const
function SlicesSliceGetByDomainMinConst(handle, meta) &
      bind(C, name='SlicesSliceGetByDomainMinConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), intent(in), value :: meta
   type(c_ptr) :: SlicesSliceGetByDomainMinConst
end function SlicesSliceGetByDomainMinConst

!! Get, by domainMin
function SlicesSliceGetByDomainMin(handle, meta) &
      bind(C, name='SlicesSliceGetByDomainMin')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   real(c_double), intent(in), value :: meta
   type(c_ptr) :: SlicesSliceGetByDomainMin
end function SlicesSliceGetByDomainMin

!! Set, by domainMin
subroutine SlicesSliceSetByDomainMin(handle, meta, fieldHandle) &
      bind(C, name='SlicesSliceSetByDomainMin')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   real(c_double), intent(in), value :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine SlicesSliceSetByDomainMin

!! ------------------------
!! Re: metadatum domainMax
!! ------------------------

!! Has, by domainMax
function SlicesSliceHasByDomainMax(handle, meta) &
      bind(C, name='SlicesSliceHasByDomainMax')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), intent(in), value :: meta
   integer(c_int) :: SlicesSliceHasByDomainMax
end function SlicesSliceHasByDomainMax

!! Get, by domainMax, const
function SlicesSliceGetByDomainMaxConst(handle, meta) &
      bind(C, name='SlicesSliceGetByDomainMaxConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   real(c_double), intent(in), value :: meta
   type(c_ptr) :: SlicesSliceGetByDomainMaxConst
end function SlicesSliceGetByDomainMaxConst

!! Get, by domainMax
function SlicesSliceGetByDomainMax(handle, meta) &
      bind(C, name='SlicesSliceGetByDomainMax')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   real(c_double), intent(in), value :: meta
   type(c_ptr) :: SlicesSliceGetByDomainMax
end function SlicesSliceGetByDomainMax

!! Set, by domainMax
subroutine SlicesSliceSetByDomainMax(handle, meta, fieldHandle) &
      bind(C, name='SlicesSliceSetByDomainMax')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   real(c_double), intent(in), value :: meta
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine SlicesSliceSetByDomainMax

!! ------------------------
!! Re: metadatum domainUnit
!! ------------------------

!! Has, by domainUnit
function SlicesSliceHasByDomainUnit(handle, meta, metaSize) &
      bind(C, name='SlicesSliceHasByDomainUnit')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   integer(c_int) :: SlicesSliceHasByDomainUnit
end function SlicesSliceHasByDomainUnit

!! Get, by domainUnit, const
function SlicesSliceGetByDomainUnitConst(handle, meta, metaSize) &
      bind(C, name='SlicesSliceGetByDomainUnitConst')
   use iso_c_binding
   implicit none
   type(c_ptr), intent(in), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: SlicesSliceGetByDomainUnitConst
end function SlicesSliceGetByDomainUnitConst

!! Get, by domainUnit
function SlicesSliceGetByDomainUnit(handle, meta, metaSize) &
      bind(C, name='SlicesSliceGetByDomainUnit')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr) :: SlicesSliceGetByDomainUnit
end function SlicesSliceGetByDomainUnit

!! Set, by domainUnit
subroutine SlicesSliceSetByDomainUnit(handle, meta, metaSize, fieldHandle) &
      bind(C, name='SlicesSliceSetByDomainUnit')
   use iso_c_binding
   implicit none
   type(c_ptr), value :: handle
   integer(c_size_t), intent(in), value :: metaSize
   character(c_char), intent(in) :: meta(metaSize)
   type(c_ptr), intent(in), value :: fieldHandle
end subroutine SlicesSliceSetByDomainUnit


!! -----------------------------------------------------------------------------
!! -----------------------------------------------------------------------------

end interface
end module generalSlices
